# TaipeiPy-pybind11-buffer-array

./: CMakeLists.txt  LICENSE  Makefile  Pybind11_Buffer_Array_Interface.ipynb  Pybind11_Buffer_Array_Interface.slides.html  README.md  example.py  index.html
include/: init_array.hpp  init_buffer_protocol.hpp
mylib/: __init__.py
src/: init_array.cpp  init_buffer_protocol.cpp  mylib.cpp
tests/: test_arg_min.py  test_argmin.py  test_arr_add_value.py  test_print_buffer.py
